intTests/test_mir_points_to_errors/test.log.good
Loading file "test.saw"
Verifying test/944210a0::f[0] ...
Simulating test/944210a0::f[0] ...
== Anticipated failure message ==
Stack trace:
   (builtin) in mir_verify
   test.saw:9:8-9:61 in (callback)
   (builtin) in fails
   test.saw:9:1-9:61 (at top level)
at test.saw:6:5:
Error when loading through pointer that appeared in the override's points-to precondition(s):
Precondition:
  (@AllocIndex 0 -> let { _x`1 = TCNum 32;
                        }
   in ecNumber (TCNum 3) (seq _x`1 Bool)
        (PLiteralSeqBool _x`1) : [32])
Failure reason: 
  attempted to read empty mux tree

Verifying test/944210a0::g[0] ...
Simulating test/944210a0::g[0] ...
== Anticipated failure message ==
Stack trace:
   (builtin) in mir_verify
   test.saw:18:8-18:67 in (callback)
   (builtin) in fails
   test.saw:18:1-18:67 (at top level)
at test.saw:15:5:
Error when loading through pointer that appeared in the override's points-to precondition(s):
Precondition:
  (@AllocIndex 0 ->* let { _x`1 = TCNum 32;
                           _x`2 = seq _x`1 Bool;
                           _x`3 = PLiteralSeqBool _x`1;
                         }
   in [ ecNumber (TCNum 1) _x`2 _x`3
      , ecNumber (TCNum 2) _x`2 _x`3
      , ecNumber (TCNum 3) _x`2 _x`3 ] : [3][32])
Failure reason: 
  When trying to read element at offset 2 from pointer:
  attempted to read empty mux tree

